--- a/chrome/index.html
+++ b/chrome/index.html
@@ -861,7 +861,10 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 
 
 	<h2 id="current-status">Current status</h2>
-<p>The Chrome browser doesn't currently have mechanisms designed specifically for tracking protection.</p>
+
+<div class="notices warning" ><p>The Chrome browser doesn't currently have mechanisms designed specifically for tracking protection.</p>
+</div>
+
 <h2 id="classification-of-known-trackers">Classification of &ldquo;known trackers&rdquo;</h2>
 <p>Chrome does not classify classify trackers or domains for the purposes of tracking protection.</p>
 <h2 id="third-party-cookies">Third-party cookies</h2>
