Clarify tracking protection

--- a/introduction/tracking-protection/index.html
+++ b/introduction/tracking-protection/index.html
@@ -960,7 +960,7 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 <div class="notices info" ><p>Nevertheless, to align with other discussions around the same topic, Cookie Status will use <em>first-party cookie</em>  and <em>third-party cookie</em> for clarity's sake.</p>
 </div>
 
-<p><strong>First-party context</strong> means that the operation happens within or across domains that share the <strong>eTLD+1</strong>. <strong>Third-party context</strong> means that the operation happens within or across domains that do not share the <strong>eTLD+1</strong>.</p>
+<p><strong>First-party context</strong> means that the operation happens between domains within <strong>the same site</strong>, í.e. domains that share the <strong>eTLD+1</strong>. <strong>Third-party context</strong> means that the operation happens <strong>cross-site</strong>, i.e. between domains that do not share the <strong>eTLD+1</strong>.</p>
 <p>Here are some examples. Consider the user to be on the domain <strong><a href="http://www.cookiestatus.com">www.cookiestatus.com</a></strong>.</p>
 <div id="" style="overflow-x:auto;">
   <table>
