Update Edge status

--- a/index.html
+++ b/index.html
@@ -811,8 +811,8 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 <th align="right"></th>
 <th><a href="/brave/">Brave</a></th>
 <th><a href="/chrome/">Chrome</a></th>
-<th><a href="/cliqz/"><strong>Cliqz</strong></a></th>
-<th><a href="/edge/">Edge (Beta)</a></th>
+<th><a href="/cliqz/">Cliqz</a></th>
+<th><a href="/edge/">Edge</a></th>
 <th><a href="/firefox/">Firefox</a></th>
 <th><a href="/safari/">Safari</a></th>
 </tr>
