--- a/index.html
+++ b/index.html
@@ -801,8 +801,8 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 <div class="notices note" ><p>Changes added in the <strong>latest release</strong> of each browser are indicated with <span style="background: yellow;">yellow highlight</span>. You can <strong>click</strong> the <a class="fa fa-info-circle" rel="footnote"></a> icon to be redirected to the respective section in each browser's own &ldquo;Current Status&rdquo; page.</p>
 </div>
 
-<p><strong>Last updated</strong>: 16 January 2020<br>
-Updated Edge status to signal the release of the Chromium-based browser.</p>
+<p><strong>Last updated</strong>: 20 January 2020<br>
+Clarified Safari referrer behavior.</p>
 <p><a title="Suggest an edit" href="https://github.com/cookie-status/cookie-status-dev/issues/new?labels=content&title=%5BContent%20issue%5D%20Current%20Status" target="_blank"><i class="fa fa-edit"></i> Suggest an edit</a></p>
 <p><a href="#" id="fullscreen">Toggle full screen</a></p>
 <div id="cs" style="overflow-x:auto;">
@@ -907,7 +907,7 @@ Updated Edge status to signal the release of the Chromium-based browser.</p>
 <td><a href="/cliqz/#referrer" rel="footnote"  class="fa fa-info-circle"></a> Default browser policy (<code>no-referrer-when-downgrade</code>)</td>
 <td><a href="/edge/#referrer" rel="footnote"  class="fa fa-info-circle"></a> Default browser policy (<code>no-referrer-when-downgrade</code>)</td>
 <td><a href="/firefox/#referrer" rel="footnote"  class="fa fa-info-circle"></a> Default browser policy (<code>no-referrer-when-downgrade</code>)</td>
-<td><p><a href="/safari/#referrer" rel="footnote"  class="fa fa-info-circle"></a> <span class="new">Strip all cross-site referrers to origin.</span></p><p><a href="/safari/#referrer" rel="footnote"  class="fa fa-info-circle"></a> For referrers that are known trackers, where the referring page also has URL decoration (query parameters or fragments), referrer is downgraded to eTLD+1.</p></td>
+<td><p><a href="/safari/#referrer" rel="footnote"  class="fa fa-info-circle"></a> <span class="new">Strip all referrers in non-navigational HTTP requests to origin.</span></p><p><a href="/safari/#referrer" rel="footnote"  class="fa fa-info-circle"></a> For referrers that are known trackers, where the referring page also has URL decoration (query parameters or fragments), <code>document.referrer</code> is downgraded to eTLD+1.</p></td>
 </tr>
 <tr>
 <td align="right"><strong>Other</strong></td>
