--- a/index.html
+++ b/index.html
@@ -802,7 +802,8 @@ d2FyZQBHSU1QIDIuMTAuNEA6CGYAAAAASUVORK5CYII=" />
 </div>
 
 <p><strong>Last updated</strong>: 24 January 2020<br>
-Update details about latest Cliqz version.</p>
+Update details about latest Cliqz version.<br>
+Clarify how Brave strips tracking parameters from URLs.</p>
 <p><a title="Suggest an edit" href="https://github.com/cookie-status/cookie-status-dev/issues/new?labels=content&title=%5BContent%20issue%5D%20Current%20Status" target="_blank"><i class="fa fa-edit"></i> Suggest an edit</a></p>
 <p><a href="#" id="fullscreen">Toggle full screen</a></p>
 <div id="cs" style="overflow-x:auto;">
@@ -911,7 +912,7 @@ Update details about latest Cliqz version.</p>
 </tr>
 <tr>
 <td align="right"><strong>Other</strong></td>
-<td><a href="/brave/#other" rel="footnote" class="fa fa-info-circle"></a> <span class="new">Removes known tracking parameters from URL query strings.</span></td>
+<td><a href="/brave/#other" rel="footnote" class="fa fa-info-circle"></a> <span class="new">Removes known tracking parameters (<code>fbclid</code>, <code>gclid</code>, <code>msclkid</code>, <code>mc_eid</code>) from URL query strings.</span></td>
 <td>n/a</td>
 <td><a href="/cliqz/#other" rel="footnote" class="fa fa-info-circle"></a> Algorithmically identify and purge unique user identifiers from requests to third-party domains.</td>
 <td>n/a</td>
